--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,13 @@ name = "pypi"
 certifi = "==2024.2.2"
 distlib = "==0.3.8"
 filelock = "==3.13.1"
+matplotlib = "*"
 music21 = "==5.7.2"
+numpy = "*"
 openai = "*"
 pipenv = "==2023.12.1"
 platformdirs = "==4.2.0"
+scipy = "*"
 virtualenv = "==20.25.0"
 
 
